Fix iframe wrapper overlay from glitching/overflowing.

--- a/src/components/iframe.css
+++ b/src/components/iframe.css
@@ -2,6 +2,7 @@
   flex: 1;
   position: relative;
   height: 100%;
+  overflow: hidden;
 }
 /* Fix issue with drag event transfering to iframe */
 .react-draggable-transparent-selection .iframe-wrapper::after {
